# xpc-bindgen

./: Cargo.toml  README.md  build.rs
src/: bindings.rs  header.h
xpc/: Cargo.toml
xpc-bindgen/: Cargo.toml
xpc-bindgen/src/: lib.rs
xpc/src/: connection.rs  error.rs  event.rs  lib.rs  utils.rs
